force-app/main/default/objects/sc_ext__Data_Classification_Level__c/fields/sc_ext__Color__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Color__c</fullName>
    <label>Color</label>
    <length>20</length>
    <type>Text</type>
</CustomField>