force-app/main/default/objects/sc_ext__Data_Classification_Level__c/fields/sc_ext__Description__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>