force-app/main/default/objects/sc_ext__Data_Classification_Level__c/fields/sc_ext__Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Developer_Name__c</fullName>
    <label>Developer Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>