force-app/main/default/objects/sc_ext__Data_Classification_Level__c/fields/sc_ext__High_Risk__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__High_Risk__c</fullName>
    <defaultValue>false</defaultValue>
    <label>High Risk</label>
    <type>Checkbox</type>
</CustomField>