force-app/main/default/objects/sc_ext__Data_Classification_Level__c/fields/sc_ext__Icon__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Icon__c</fullName>
    <label>Icon</label>
    <length>100</length>
    <type>Text</type>
</CustomField>