force-app/main/default/objects/sc_ext__Data_Classification_Level__c/fields/sc_ext__Num_of_Fields_Classified__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Num_of_Fields_Classified__c</fullName>
    <label># of Fields Classified</label>
    <summaryFilterItems>
        <field>sc_ext__Data_Classification_Field_Level__c.sc_ext__Declassified__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>sc_ext__Data_Classification_Field_Level__c.sc_ext__Archived__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>sc_ext__Data_Classification_Field_Level__c.sc_ext__Data_Classification_Severity_Level__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>